cc_library(
    name = "json",
    hdrs = [
  "include/nlohmann/adl_serializer.hpp",
        "include/nlohmann/byte_container_with_subtype.hpp",
 "include/nlohmann/detail/abi_macros.hpp",
        "include/nlohmann/detail/conversions/from_json.hpp",
"include/nlohmann/detail/conversions/to_chars.hpp",
        "include/nlohmann/detail/conversions/to_json.hpp",
  "include/nlohmann/detail/exceptions.hpp",
        "include/nlohmann/detail/hash.hpp",
 "include/nlohmann/detail/input/binary_reader.hpp",
 "include/nlohmann/detail/input/input_adapters.hpp",
 "include/nlohmann/detail/input/json_sax.hpp",
        "include/nlohmann/detail/input/lexer.hpp",
"include/nlohmann/detail/input/parser.hpp",
  "include/nlohmann/detail/input/position_t.hpp",
 "include/nlohmann/detail/iterators/internal_iterator.hpp",
 "include/nlohmann/detail/iterators/iter_impl.hpp",
  "include/nlohmann/detail/iterators/iteration_proxy.hpp",
  "include/nlohmann/detail/iterators/iterator_traits.hpp",
  "include/nlohmann/detail/iterators/json_reverse_iterator.hpp",
"include/nlohmann/detail/iterators/primitive_iterator.hpp",
  "include/nlohmann/detail/json_custom_base_class.hpp",
 "include/nlohmann/detail/json_pointer.hpp",
"include/nlohmann/detail/json_ref.hpp",
"include/nlohmann/detail/macro_scope.hpp",
